--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">kdg-hilt-mvvm</string>
+
+    <!--  Button  -->
+    <string name="btn_retry">Retry</string>
+
+    <!--  Error  -->
+    <string name="title_generic_error">Sorry, something went wrong</string>
+    <string name="message_generic_error">Please try again.</string>
+    <string name="title_network_error">Network connection lost</string>
+    <string name="message_network_error">Use this moment to reconnect with yourself and try again.</string>
 </resources>
